--- a/my-fake-product-store/src/index.css
+++ b/my-fake-product-store/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  :root {
+    --color-primary: 39, 39, 42;
+    --color-white: 255, 255, 255;
+  }
+}
